<resources>
    <string name="app_name">Discount Storage</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sing_in">Sing In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="not_reg">Not registered? SingUp Now!</string>
    <string name="sing_up">Register Form</string>
    <string name="already_reg">Already registered? Login Me!</string>
    <string name="reset">Reset Password</string>
    <string name="Back">Back</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up
    </string>
    <string name="email_is_empty">Enter Email</string>
    <string name="password_is_empty">Enter Password</string>
    <string name="password_to_short">Password to short</string>
    <string name="navigation">Navigation</string>
    <string name="open_navigation">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="drawer">Drawer</string>
    <string name="scan_with_camera">Scanning with camera</string>
    <string name="show_list_rooms">Show all rooms</string>
    <string name="title_group">Manager Rooms</string>
    <string name="create_room">Create Room</string>
    <string name="title_connectRoom">Connect to Room</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password to Email</string>
    <string name="delete_user">Delete User</string>
    <string name="sing_out">Sing Out</string>
    <string name="setting_change">Change</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="email_update">"Email address is updated. Please sign in with new email id!"</string>
    <string name="failed_update_email">"Failed to update email!"</string>
    <string name="pass_update">Password is updated. Please sign in with new email id!</string>
    <string name="pass_update_fail">Failed to update password!</string>
    <string name="send_reset">"We have sent you instructions to reset your password!"</string>
    <string name="failed_reset">"Failed to send reset email!"</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add BarCode</string>
    <string name="scan">Scan with Camera</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="enter">Enter</string>
    <string name="room_was_create">Room was created</string>
    <string name="name">Name</string>
    <string name="only_ean_13">"Sorry, but now we scan only EAN-13"</string>
    <string name="enter_name_card">"Enter name Card"</string>
    <string name="enter_category">"Enter Category"</string>
    <string name="first_room">"Firs create room"</string>
    <string name="card_add">"Card Was Add"</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_room">Add Room</string>
    <string name="data_incorrect">"User or room name not found"</string>
    <string name="password_incorrect">"Password invalid"</string>
    <string name="room_added">Room was added</string>
    <string name="add_room_first">"First add room" </string>
    <string name="add_card_first">"First add card" </string>
    <string name="room_remove">Room was removed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="choose_room">Choose Room</string>
    <string name="choose_card">Choose Card</string>
    <string name="this_is_title">This is Title</string>
    <string name="this_is_description">This is Description</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="text_view">TextView</string>
    <string name="name_card">NameCard</string>
    <string name="category">Category</string>
    <string name="email_of_creator">Email of Creator</string>
    <string name="name_room">Name Room</string>
    <string name="password_for_room">Password for Room</string>
    <string name="new_name">New name</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <array name="room_deleted">Room was deleted</array>
</resources>
