<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stosh.discountstorage.login.fragments.PasswordResetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_pass"
            android:textColor="@color/white"
            android:textSize="@dimen/tv_forgotPassSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="@dimen/textView_resetPassSize" />


        <EditText
            android:id="@+id/editTextEmailReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marginTop"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btnResetBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/Back" />
        <ProgressBar
            android:id="@+id/progressBarResetPassword"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="insideInset"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>
