<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorPrimaryDark"
    tools:context="com.stosh.discountstorage.fragments.drawer.CreateCardFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
            android:contentDescription="@string/add" />

        <TextView
            android:id="@+id/textViewCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_view"
            android:textColor="@color/yellow"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_room"
                android:textColor="@color/white"/>

            <Spinner
                android:id="@+id/spinnerNameRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextNameCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_card"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/category"
            android:inputType="textPersonName"
            android:textColor="@color/yellow"
            android:textColorHint="@color/yellow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/cancel"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/add"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
