<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@mipmap/icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark20"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewCreateCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/add"
            android:visibility="visible"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

        <TextView
            android:id="@+id/textViewCreateCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_view"
            android:textColor="@color/yellow"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimaryDark20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_room"
                android:textColor="@color/white" />

            <Spinner
                android:id="@+id/spinnerCreateCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:isScrollContainer="true" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextCreateCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/name_card"
            android:inputType="textPersonName"

            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextCreateCardCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/category"
            android:inputType="textPersonName"

            android:textColor="@color/yellow"
            android:textColorHint="@color/yellow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"

            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCreateCardCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="1"
                android:background="@drawable/selector_yellow"
                android:gravity="center"
                android:text="@string/cancel"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnCreateCardAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="1"
                android:background="@drawable/selector_yellow"
                android:gravity="center"
                android:text="@string/add"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
