<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimaryDark"
              tools:context="com.stosh.discountstorage.activities.SettingProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/containerSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_marginTop"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <Button
                android:id="@+id/btnSettingChangeEmailVis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_yellow"
                android:text="@string/change_email"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <Button
                android:id="@+id/btnSettingChangePasswordVis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_yellow"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <Button
                android:id="@+id/btnDeleteUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_yellow"
                android:text="@string/delete_user"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <Button
                android:id="@+id/btnSingOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:background="@drawable/selector_yellow"
                android:text="@string/sing_out"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <ProgressBar
                android:id="@+id/progressBarSetting"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>