<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stosh.discountstorage.ScanActivity"
    android:background="@color/colorPrimaryDark">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/btnScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_margin="1dp"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/scan" />

        <ImageView
            android:id="@+id/imageViewBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_margin="1dp"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/cancel"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:layout_marginTop="@dimen/marginTop"
                android:background="@color/yellow"
                android:gravity="center"
                android:text="@string/add"
                android:visibility="gone"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarScan"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarStyle="insideInset"
            android:visibility="gone" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
